# cto

./: .dockerignore  .env.example  .mcp.json.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.planning/codebase/: 2026-06-18-repo-sync-plan.md
data/: schedules.yaml.example
data/connectors/: confluence.yaml.example
data/playbooks/: plan-then-execute.md  subagent-driven.md  systematic-debugging.md  tdd.md  verify-before-done.md
data/skills/: onboarding-tour.md  project-cleanup.md  security-audit.md
data/skills/api-explore/: SKILL.md
data/skills/cve-check/: SKILL.md
data/skills/eli5/: SKILL.md
docs/: DEMO.md  DEPLOY.md  LANGGRAPH_CHEATSHEET.md  LEARNING_PATH.md  MCP.md  PHASE0_ARCHITECTURE.md  PHASE10_ARCHITECTURE.md  PHASE1_ARCHITECTURE.md  PHASE2_5_ARCHITECTURE.md  PHASE2_ARCHITECTURE.md  PHASE3_5_ARCHITECTURE.md  PHASE3_ARCHITECTURE.md  PHASE4_5_ARCHITECTURE.md  PHASE4_6_ARCHITECTURE.md  PHASE4_ARCHITECTURE.md  PHASE5_ARCHITECTURE.md  PHASE6_ARCHITECTURE.md  PHASE7_ARCHITECTURE.md  PHASE8_5G_ARCHITECTURE.md  PHASE8_5_ARCHITECTURE.md  PHASE8_ARCHITECTURE.md  PHASE9_ARCHITECTURE.md  SESSION_NOTES.md  SPRINT1_SKILLS_HARDENING.md  TESTING.md
eval/: golden_set.jsonl  golden_set_adversarial.jsonl  run_eval.py  run_eval_gen.py  run_eval_v1.py
packaging/: README.md  compose.cto-infra.yaml  cto_entry.py  pyinstaller_cto.spec
sandbox/: Dockerfile  Dockerfile.ops
scripts/: ask.py  bench_latency.py  confluence_sync.py  index_graph.py  index_repos_v1.py  mcp_status.py  preflight.py  query_v1.py  watch.py
scripts/jobs/: pull_repos.py  sync_repos.py
scripts/legacy/: README.md  index_repos.py  query.py
src/rag/: config.py  embed.py  tracing.py
tests/: conftest.py  smoke_test.py  test_confluence.py  test_executor.py  test_jira.py  test_mcp_config.py  test_mcp_events.py  test_mcp_resources_prompts.py  test_mcp_tools.py  test_phase4.py  test_phase4_5.py  test_phase8.py  test_phase9.py  test_skills_generic.py  test_skills_generic_critic.py  test_sources_modal.py  test_sync_repos.py  test_ui_playwright.py  test_web_tools.py
tests/fixtures/: README.md
(+115 files in other folders)
